--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,7 +19,10 @@
   {{ $style := resources.Get "scss/style.scss" | resources.ToCSS | minify }}
   <link href="{{ $style.Permalink }}" rel="stylesheet" />
 
-  {{ "<!--Favicon-->" | safeHTML }}
+  {{ "<!-- Leaflet -->" | safeHTML }}
+  <link rel="stylesheet" href="{{"plugins/leaflet/leaflet.css" | absURL }}" />
+
+  {{ "<!-- Favicon -->" | safeHTML }}
   <link rel="shortcut icon" href="{{ "images/favicon.ico" | absURL }}" type="image/x-icon" />
   <link rel="icon" href="{{ "images/favicon.png" | absURL }}" type="image/x-icon" />
 </head>
