--- a/assets/scss/components/_resume-section.scss
+++ b/assets/scss/components/_resume-section.scss
@@ -36,6 +36,7 @@
             padding: 30px;
             border-radius: 20px;
             margin-bottom: 30px;
+            position: relative;
             box-shadow: 0px 20px 40px 0px rgba(50, 65, 141, 0.12);
             span{
                 display: block;
