--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,3 +1,117 @@
+@font-face {
+    font-family: 'Junction';
+    src: url('../fonts/junction-master/webfonts/junction-regular.woff') format('woff'),
+         url('../fonts/junction-master/webfonts/junction-regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Junction';
+    src: url('../fonts/junction-master/webfonts/junction-bold.woff') format('woff'),
+         url('../fonts/junction-master/webfonts/junction-bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'Junction';
+    src: url('../fonts/junction-master/webfonts/junction-light.woff') format('woff'),
+         url('../fonts/junction-master/webfonts/junction-light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+/** Montserrat Light **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 300;
+    font-style: normal;
+    src: url("../fonts/montserrat/Montserrat-Light.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-Light.woff") format("woff");
+}
+
+/** Montserrat Light-Italic **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 300;
+    font-style: italic;
+    src: url("../fonts/montserrat/Montserrat-LightItalic.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-LightItalic.woff") format("woff");
+}
+
+/** Montserrat Regular **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 400;
+    font-style: normal;
+    src: url("../fonts/montserrat/Montserrat-Regular.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-Regular.woff") format("woff");
+}
+
+/** Montserrat Regular-Italic **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 400;
+    font-style: italic;
+    src: url("../fonts/montserrat/Montserrat-Italic.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-Italic.woff") format("woff");
+}
+
+/** Montserrat Medium **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 500;
+    font-style: normal;
+    src: url("../fonts/montserrat/Montserrat-Medium.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-Medium.woff") format("woff");
+}
+
+/** Montserrat Medium-Italic **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 500;
+    font-style: italic;
+    src: url("../fonts/montserrat/Montserrat-MediumItalic.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-MediumItalic.woff") format("woff");
+}
+
+/** Montserrat SemiBold **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 600;
+    font-style: normal;
+    src: url("../fonts/montserrat/Montserrat-SemiBold.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-SemiBold.woff") format("woff");
+}
+
+/** Montserrat SemiBold-Italic **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 600;
+    font-style: italic;
+    src: url("../fonts/montserrat/Montserrat-SemiBoldItalic.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-SemiBoldItalic.woff") format("woff");
+}
+
+/** Montserrat Bold **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-style: normal;
+    src: url("../fonts/montserrat/Montserrat-Bold.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-Bold.woff") format("woff");
+}
+
+/** Montserrat Bold-Italic **/
+@font-face {
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-style: italic;
+    src: url("../fonts/montserrat/Montserrat-BoldItalic.woff2") format("woff2"),
+         url("../fonts/montserrat/Montserrat-BoldItalic.woff") format("woff");
+}
+
 .base-font {
     font-family: $font-family-base;
 }
