--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,27 +2,23 @@
   <meta charset="utf-8" />
   <title>{{ .Title }}</title>
 
-  {{ "<!-- mobile responsive meta -->" | safeHTML }}
+  {{/* mobile responsive meta */}}
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-  {{ "<!-- Slick Carousel -->" | safeHTML }}
-  <link rel="stylesheet" href="{{ "plugins/slick/slick.css" | absURL }}" />
-  <link rel="stylesheet" href="{{ "plugins/slick/slick-theme.css" | absURL }}" />
-  {{ "<!-- Font Awesome -->" | safeHTML }}
-  <link rel="stylesheet" href="{{ "plugins/font-awesome/css/font-awesome.min.css" | absURL }}" />
-
-  {{ "<!-- Magnific Popup -->" | safeHTML }}
-  <link rel="stylesheet" href="{{"plugins/magnafic-popup/magnific-popup.css" | absURL }}" />
-
-  {{ "<!-- Stylesheets -->" | safeHTML }}
+  {{ $cssslick := resources.Get "css/vendor/slick.css" | minify }}
+  {{ $cssslicktheme := resources.Get "css/vendor/slick-theme.css" | minify }}
+  {{ $cssfontawesome := resources.Get "css/vendor/font-awesome.css" | minify }}
+  {{ $cssmagnific := resources.Get "css/vendor/magnific-popup.css" | minify }}
   {{ $style := resources.Get "scss/style.scss" | resources.ToCSS | minify }}
-  <link href="{{ $style.Permalink }}" rel="stylesheet" />
+  {{ $cssleaflet := resources.Get "css/vendor/leaflet.css" | minify }}
+  <link rel="stylesheet" href="{{ $cssslick.Permalink }}" />
+  <link rel="stylesheet" href="{{ $cssslicktheme.Permalink }}" />
+  <link rel="stylesheet" href="{{ $cssfontawesome.Permalink }}" />
+  <link rel="stylesheet" href="{{ $cssmagnific.Permalink }}" />
+  <link rel="stylesheet" href="{{ $style.Permalink }}"/>
+  <link rel="stylesheet" href="{{ $cssleaflet.Permalink }}" />
 
-  {{ "<!-- Leaflet -->" | safeHTML }}
-  <link rel="stylesheet" href="{{"plugins/leaflet/leaflet.css" | absURL }}" />
-
-  {{ "<!-- Favicon -->" | safeHTML }}
   <link rel="shortcut icon" href="{{ "images/favicon.ico" | absURL }}" type="image/x-icon" />
   <link rel="icon" href="{{ "images/favicon.png" | absURL }}" type="image/x-icon" />
 </head>
