Made footer config conditional and data driven, minor adjustments to styling.

--- a/assets/scss/components/_footer-section.scss
+++ b/assets/scss/components/_footer-section.scss
@@ -23,7 +23,7 @@
         padding: 100px 80px;
         border-radius: 20px;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         margin-top: -110px;
         flex-wrap: wrap;
         position: relative;
