--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -28,8 +28,10 @@
             <span class="top-title pre-line">{{ .topTitle }}</span>
             {{ .content | markdownify }}
           </div>
+          {{ if .buttonEnable }}
           <a type="button" class="btn btn-lg btn-primary btn-zoom"
             href="{{ .buttonURL | absURL }}">{{ .buttonName }}</a>
+          {{ end }}
         </div>
       </div>
       <div class="col-lg-6">
