--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -42,7 +42,7 @@
 					<div class="blog-page__item-content bg-white">
 						<span class="small">{{ .PublishDate.Format "January 2, 2006" }}</span>
 						<h5 class="mb-0">
-							<a class="text-dark" href="{{ .Permalink }}">{{ .Title }}</a>
+							<a class="text-dark text-decoration-none" href="{{ .Permalink }}">{{ .Title }}</a>
 						</h5>
 					</div>
 				</div>
