--- a/layouts/partials/blogSection.html
+++ b/layouts/partials/blogSection.html
@@ -29,7 +29,7 @@
 					<div class="blog-preview__item-content bg-white">
 						<span class="small">{{ .PublishDate.Format "January 2, 2006" }}</span>
 						<h5 class="mb-0">
-							<a class="text-dark" href="{{ .Permalink }}">{{ .Title }}</a>
+							<a class="text-dark text-decoration-none" href="{{ .Permalink }}">{{ .Title }}</a>
 						</h5>
 					</div>
 				</div>
@@ -46,4 +46,4 @@
 		</div>
 	</div>
 </section>
-{{ end }} {{ end }}
+{{ end }}{{ end }}
