--- a/assets/scss/components/_footer-section.scss
+++ b/assets/scss/components/_footer-section.scss
@@ -20,7 +20,7 @@
     }
     &__cta {
         background: $primary;
-        padding: 100px 80px;
+        padding: 60px 50px;
         border-radius: 20px;
         display: flex;
         align-items: center;
@@ -63,11 +63,14 @@
             padding: 70px 40px;
         }
         &_content {
-            width: 60%;
+            width: 70%;
             @include desktop {
                 width: 100%;
                 text-align: center;
                 margin-bottom: 20px;
+            }
+            p {
+              text-align: left;
             }
             span {
                 font-size: 20px;
@@ -91,7 +94,7 @@
             }
         }
         &_action {
-            width: 40%;
+            width: 30%;
             @include desktop {
                 width: 100%;
                 text-align: center;
@@ -111,9 +114,13 @@
             padding: 50px 0;
             .footer__widget_address {
                 ul {
+                    text-align: left;
                     margin-right: 2.14285714em; // match fa-lu margin
                 }
             }
+        }
+        &_sitemap {
+            font-weight: 500;
         }
     }
     &__footer {
@@ -131,17 +138,5 @@
                 }
             }
         }
-    }
-}
-@keyframes moveLeft {
-    0%,
-    100% {
-        -webkit-transform: translateX(0) rotate(-20deg);
-        transform: translateX(0) rotate(-20deg);
-    }
-
-    50% {
-        -webkit-transform: translateX(15px) rotate(-20deg);
-        transform: translateX(15px) rotate(-20deg);
     }
 }
